--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,6 +6,6 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.synthesizer.source.mars.HomeFragment"
+        android:name="com.synthesizer.source.mars.ui.home.HomeFragment"
         android:label="HomeFragment" />
 </navigation>
