--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -16,7 +15,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:menu="@menu/menu"
+            app:menu="@menu/menu_curiosity"
             app:title="@string/mars_rover_photos"
             app:titleTextColor="@color/gray" />
     </com.google.android.material.appbar.AppBarLayout>
@@ -53,7 +52,6 @@
         android:id="@+id/photoList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:animateLayoutChanges="false"
         android:background="@color/gray"
         android:layoutAnimation="@null"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
