--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,5 +7,19 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.synthesizer.source.mars.ui.home.HomeFragment"
-        android:label="HomeFragment" />
+        android:label="HomeFragment">
+        <action
+            android:id="@+id/goToPhotoDetail"
+            app:destination="@id/photoDetailFragment" />
+
+    </fragment>
+    <dialog
+        android:id="@+id/photoDetailFragment"
+        android:name="com.synthesizer.source.mars.ui.photodetail.PhotoDetailFragment"
+        android:label="PhotoDetailFragment">
+        <argument
+            android:name="id"
+            android:defaultValue="-1"
+            app:argType="integer" />
+    </dialog>
 </navigation>
