--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,9 +8,17 @@
         <item name="android:statusBarColor" tools:targetApi="l">@color/dark_blue</item>
         <!-- Customize your theme here. -->
         <item name="android:actionOverflowButtonStyle">@style/ActionButton.Overflow.Icon</item>
+        <item name="android:dialogTheme">@style/styleDialogFragment</item>
     </style>
 
     <style name="ActionButton.Overflow.Icon" parent="Widget.AppCompat.ActionButton.Overflow">
         <item name="android:src">@drawable/ic_baseline_filter_alt_24</item>
+    </style>
+
+    <style name="styleDialogFragment" parent="Base.Theme.AppCompat.Dialog">
+        <item name="android:windowMinWidthMajor">85%</item>
+        <item name="android:windowMinWidthMinor">85%</item>
+        <item name="android:windowBackground">@null</item>
+        <item name="android:textColor">@color/dark_gray</item>
     </style>
 </resources>
