add domain models and mappers

--- a/app/src/main/res/layout/fragment_photo_detail.xml
+++ b/app/src/main/res/layout/fragment_photo_detail.xml
@@ -70,7 +70,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:text="@{viewModel.photoDetail.earthDate}"
+                android:text="@{viewModel.photoDetail.date}"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="@id/guidelineStart"
                 app:layout_constraintTop_toBottomOf="@id/labelDate"
@@ -92,7 +92,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:text="@{viewModel.photoDetail.rover.name}"
+                android:text="@{viewModel.photoDetail.roverName}"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="@id/guidelineStart"
                 app:layout_constraintTop_toBottomOf="@id/labelRoverName"
@@ -116,7 +116,7 @@
                 android:layout_marginTop="4dp"
                 android:layout_marginEnd="16dp"
                 android:paddingBottom="24dp"
-                android:text="@{viewModel.photoDetail.camera.fullName}"
+                android:text="@{viewModel.photoDetail.cameraName}"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="@id/guidelineCenter"
                 app:layout_constraintStart_toStartOf="@id/guidelineStart"
@@ -138,7 +138,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:text="@{viewModel.photoDetail.rover.status}"
+                android:text="@{viewModel.photoDetail.status}"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                 app:layout_constraintStart_toStartOf="@id/guidelineCenter"
@@ -161,7 +161,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:text="@{viewModel.photoDetail.rover.launchDate}"
+                android:text="@{viewModel.photoDetail.launchDate}"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                 app:layout_constraintStart_toStartOf="@id/guidelineCenter"
@@ -184,7 +184,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:text="@{viewModel.photoDetail.rover.landingDate}"
+                android:text="@{viewModel.photoDetail.landingDate}"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                 app:layout_constraintStart_toStartOf="@id/guidelineCenter"
