--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -23,29 +23,27 @@
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/rovers"
+        style="@style/styleTabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/appbar"
-        app:tabIndicator="@drawable/shape_rovers_tab_layout_indicator"
-        app:tabIndicatorAnimationDuration="@integer/material_motion_duration_long_2"
-        app:tabIndicatorAnimationMode="elastic"
-        app:tabIndicatorColor="@color/dark_blue"
-        app:tabIndicatorFullWidth="false"
-        app:tabIndicatorHeight="4dp">
+        app:layout_constraintTop_toBottomOf="@id/appbar">
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:icon="@drawable/ic_curiosity"
             android:text="@string/curiosity" />
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:icon="@drawable/ic_opportunity"
             android:text="@string/opportunity" />
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:icon="@drawable/ic_spirit"
             android:text="@string/spirit" />
     </com.google.android.material.tabs.TabLayout>
 
@@ -53,7 +51,6 @@
         android:id="@+id/photoList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layoutAnimation="@null"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/rovers"
