--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,4 +21,24 @@
         <item name="android:windowBackground">@null</item>
         <item name="android:textColor">@color/dark_gray</item>
     </style>
+
+    <style name="styleTabLayout" parent="Widget.Design.TabLayout">
+        <item name="tabIndicatorColor">@color/dark_blue</item>
+        <item name="tabIndicatorHeight">4dp</item>
+        <item name="tabPaddingStart">12dp</item>
+        <item name="tabPaddingEnd">12dp</item>
+        <item name="tabBackground">@color/white</item>
+        <item name="tabTextAppearance">@style/TabTextAppearance</item>
+        <item name="tabSelectedTextColor">?android:textColorPrimary</item>
+        <item name="tabIndicatorFullWidth">false</item>
+        <item name="tabIconTint">@color/selector_tab_item_icon_color</item>
+        <item name="tabIndicator">@drawable/shape_rovers_tab_layout_indicator</item>
+        <item name="tabIndicatorAnimationMode">elastic</item>
+    </style>
+
+    <style name="TabTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">?android:textColorSecondary</item>
+        <item name="textAllCaps">true</item>
+    </style>
 </resources>
