--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,6 +9,7 @@
         <!-- Customize your theme here. -->
         <item name="android:actionOverflowButtonStyle">@style/ActionButton.Overflow.Icon</item>
         <item name="android:dialogTheme">@style/styleDialogFragment</item>
+        <item name="colorControlActivated">@color/dark_blue</item>
     </style>
 
     <style name="ActionButton.Overflow.Icon" parent="Widget.AppCompat.ActionButton.Overflow">
