--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,6 +7,7 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">@color/dark_blue</item>
         <!-- Customize your theme here. -->
+        <item name="android:windowBackground">@color/gray</item>
         <item name="android:actionOverflowButtonStyle">@style/ActionButton.Overflow.Icon</item>
         <item name="android:dialogTheme">@style/styleDialogFragment</item>
         <item name="colorControlActivated">@color/dark_blue</item>
